# emscripten-practice

./: .gitignore  CMakeLists.txt  README.md
public/: emscripten-practice.js  emscripten-practice.wasm  index.html
src/: main.cpp
